--- a/CSS Samples/AdvanceCSS_And_SASS/NatoursProject/sass/component/_popup.scss
+++ b/CSS Samples/AdvanceCSS_And_SASS/NatoursProject/sass/component/_popup.scss
@@ -52,4 +52,33 @@
     hyphens: auto;
   }
 
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  &__close {
+
+    &:link,
+    &:visited {
+      color: $color-grey-dark;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all .2s;
+      line-height: 1;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
+  }
 }
